Afegit PruebaCyclicBarrier AKA Barrier as Join